--- a/modules/project-conditions/client/views/projectcondition-edit.html
+++ b/modules/project-conditions/client/views/projectcondition-edit.html
@@ -1,19 +1,39 @@
-<h1 class="page-title">
-	Add/Edit Project Condition
+<h1 class="page-title no-lower-margin">
+	{{project.name}}: Add / Edit Condition
 </h1>
-<div class="block-content">
+
+<form name="conditionForm" ng-submit="save(conditionForm.$valid)" novalidate>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<button class="btn btn-xs btn-link" ui-sref="p.projectcondition.list">Cancel</button>
+		<button class="btn btn-xs btn-link" href type="submit">Save</button>
+	</div>
+</div>
+
+<div class="panel panel-default">
 	<div class="panel-body">
+
 		<div class="row">
-			<div class="col-sm-9">
-				<div class="form-group">
-					<label for="title" class="control-label">ProjectCondition Name</label>
-					<input id="title" type="text" class="form-control input-sm" ng-model="d.projectcondition.name">
+			<div class="col-sm-4">
+				<div class="form-group" x-show-errors>
+					<label for="name" class="control-label">Name</label>
+					<input id="name" name="name" type="text" class="form-control input-sm" ng-model="condition.name" required>
+						<div ng-messages="conditionForm.name.$error" role="alert">
+							<p class="help-block error-text" ng-message="required">Name is required.</p>
+						</div>
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-4">
 				<div class="form-group">
-					<label for="sector" class="control-label">Project Sector</label>
-					<select id="sector" ng-model='d.projectcondition.sector' class="form-control input-sm" ng-options="sector as sector for sector in d.sectors"></select>
+					<label for="subject" class="control-label">Subject</label>
+					<input id="subject" type="text" class="form-control input-sm" ng-model="condition.subject">
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label for="sector" class="control-label">Sector</label>
+					<select id="sector" ng-model='condition.sector' class="form-control input-sm" ng-options="sector.id as sector.title for sector in sectors"></select>
 				</div>
 			</div>
 		</div>
@@ -21,8 +41,8 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="form-group">
-					<label for="shortDesc" class="control-label">ProjectCondition Description</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="d.projectcondition.description" rows=6></textarea>
+					<label for="shortDesc" class="control-label">Condition</label>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="condition.description" rows=6></textarea>
 				</div>
 			</div>
 		</div>
@@ -30,7 +50,7 @@
 			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="d.projectcondition.reportRequirements" rows=6></textarea>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="condition.reportRequirements" rows=6></textarea>
 				</div>
 			</div>
 		</div>
@@ -38,34 +58,33 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="form-group">
-					<label for="pillar" class="control-label">Pillar</label>
-					<select ng-change="d.selectTopic(pillar)" id="pillar" ng-model='d.projectcondition.pillar' class="form-control input-sm" ng-options="pillar as pillar for pillar in d.pillars"></select>
+					<label for="pillar" class="control-label">Pillars</label>
+					<div class="well well-sm">
+						<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
+					</div>
 				</div>
 			</div>
 
 			<div class="col-sm-6">
 				<div class="form-group">
-					<label for="stage" class="control-label">Project Stage</label>
-					<select id="stage" ng-model='d.projectcondition.stage' class="form-control input-sm" ng-options="stage as stage for stage in d.stages"></select>
+					<label for="stage" class="control-label">Applicable Stages</label>
+					<div class="well well-sm">
+						<select-array x-source-array="stages" x-selected-array="condition.stages" x-key-string="id" x-value-string="title"></select-array>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="topics" class="control-label">Topics</label>
-					<select multiple id="topics" ng-model='d.projectcondition.topics' class="form-control input-sm">
-						<option ng-repeat="topic in d.topics" value="{{topic.code}}">{{topic.name}}</option>
-					</select>
-				</div>
-			</div>
 
+		<hr>
+
+		<div class="row">
+			<div class="col-sm-12 text-right">
+				<button class="btn btn-default" ui-sref="p.projectcondition.list">Cancel</button>
+				<button class="btn btn-default" type="submit">Save</button>
+			</div>
 		</div>
 
 	</div>
 </div>
-<div>
-	<a class="btn btn-default" ui-sref="p.projectcondition.list">Cancel</a>
-	<a class="btn btn-primary" href ng-click="save()">Save</a>
-</div>
 
+</form>
