--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -1,4 +1,20 @@
-<h1 class="page-title">{{ project.name }}</h1>
+<h1 class="page-title no-lower-margin">{{ project.name }}</h1>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link"
+			ng-click="completePhase()"
+			ng-if="!project.currentPhase.completed">Complete Current Phase</a>
+
+		<a class="btn btn-xs btn-link"
+			ng-click="startNextPhase()"
+			ng-if="project.currentPhase.completed">Start Next Phase</a>
+
+		<a class="btn btn-xs btn-link"
+			ng-click="publishProject()"
+			ng-if="!project.isPublished">Publish Project</a>
+	</div>
+</div>
 
 <section class="panel panel-default">
 
