seed artifacts, map display.    ir and project enforcement

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -47,6 +47,7 @@
 		<ul class="list-unstyled">
 			<li><a du-smooth-scroll 	href="#anchor-tombstone">Overview</a></li>
 			<li><a du-smooth-scroll 	href="#anchor-timeline">Timeline</a></li>
+			<li><a du-smooth-scroll 	href="#anchor-enforcement">Enforcement</a></li>
 			<li><a du-smooth-scroll 	href="#anchor-publiccomments">Public Comments</a></li>
 			<li><a du-smooth-scroll 	href="#anchor-artifacts">Artifacts</a></li>
 			<li><a du-smooth-scroll 	href="#anchor-activities">Activities</a></li>
