--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -314,6 +314,20 @@ ul.list-indent-left {
 	border-right: 1px solid $border-grey;
 }
 
+.col-browser-subtitles {
+	padding: 0 8px;
+	border-bottom: 1px solid $border-grey;
+}
+
+.col-browser-subtitles:first-child {
+	padding: 0 5px;
+}
+
+
+.col-browser-subtitles .control-label {
+	padding-bottom: 0;
+	margin: 2px 0 3px;
+}
 .list-documents li,
 .list-tasks li {
 	border-top: 1px solid $border-grey;
