--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -59,11 +59,17 @@
 
 	<div ng-if="(menu.context === 'project' || menu.context === 'activity') && menu.authentication.user">
 		<hr>
+		<ul class="list-unstyled">
+			<li><a ui-sref="p.detail({projectid: menu.project.code})">Project Detail</a></li>
+		</ul>		
+		<hr>
 		<div class="dropdown">
 			<a href ng-click="$event.preventDefault();" class="dropdown-toggle" id="dropdownProjectMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" title="Manage {{ menu.project.name }} Data">Project Data <span class="caret"></span></a>
 			<div class="dropdown-menu" aria-labelledby="dropdownProjectMenu">
+				<ul class="list-unstyled">
+					<li><a ui-sref="p.detail({projectid: menu.project.code})">Project Detail</a></li>
+				</ul>		
 				<ul class="list-unstyled"  ng-show="menu.authentication.user">
-					<!-- <li><a ui-sref="p.edit({projectid: menu.project.code})">Edit Project</a></li> -->
 					<li ng-if="menu.isEAO"><a x-modal-project-schedule href x-project="menu.project">Edit Schedule</a></li>
 					<li><a x-modal-users-by-roles href x-source-object="menu.project">Edit Project Users</a></li>
 				</ul>
