--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -1,4 +1,10 @@
-<h1 class="page-title">Project Documents</h1>
+<h1 class="page-title  no-lower-margin">Project Documents</h1>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="p.detail({projectid: project.code })">Project Detail</a>
+	</div>
+</div>
 
 <div class="row">
 	<div class="col-sm-12">
