--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -41,7 +41,6 @@
 	</div>
 
 
-
 	<div ng-if="(menu.context === 'project' || menu.context === 'activity') && menu.pageAnchors('anchor-group-project');" id="anchor-group-project">
 		<hr>
 		<ul class="list-unstyled">
@@ -70,6 +69,9 @@
 					<li><a ui-sref="p.detail({projectid: menu.project.code})">Project Detail</a></li>
 				</ul>		
 				<ul class="list-unstyled"  ng-show="menu.authentication.user">
+					<li ng-repeat="item in menu.projectTopMenu.items | orderBy: 'position'" ng-if="item.shouldRender(menu.authentication.user, menu.project.code);" ng-class="{ active: $state.includes(item.state) }" class="{{item.class}}">
+						<a ui-sref="{{item.state}}" ng-bind="item.title"></a>
+					</li>				
 					<li ng-if="menu.isEAO"><a x-modal-project-schedule href x-project="menu.project">Edit Schedule</a></li>
 					<li><a x-modal-users-by-roles href x-source-object="menu.project">Edit Project Users</a></li>
 				</ul>
@@ -84,9 +86,6 @@
 			</div>
 		</div>
 	</div>
-
-
-
 
 
 	<div ng-if="menu.systemMenu.shouldRender(menu.authentication.user);">
