--- a/modules/roles/client/views/role.html
+++ b/modules/roles/client/views/role.html
@@ -4,12 +4,13 @@
 			<div class="caption">
 				<label class="control-label">{{ ::role }}</label>
 				<ul class="list-unstyled task-list">
-					<li x-modal-user-contact-info x-user="user" ng-repeat="user in users track by $index" class="clickable"><a href>{{ user.displayName }}</a></li>
+					<li x-modal-user-contact-info x-user="user" ng-repeat="user in users track by $index" class="clickable">{{ user.displayName }}</li>
 				</ul>
 				<label class="control-label text-right">
 					<a href x-modal-select-users
 						x-callback="assignUsersToRole"
 						x-users="users"
+						x-unique="true"
 						x-project="project"
 						x-parent="{type: 'role', reference: role}"
 						>Manage Users</a>
