--- a/modules/utils/client/views/partials/modal-user-contact-info.html
+++ b/modules/utils/client/views/partials/modal-user-contact-info.html
@@ -1,22 +1,14 @@
-<div class="modal-header">
-	<h3 class="modal-title">{{ utilUserContactInfo.user.name }}</h3>
-</div>
 <div class="modal-body">
 	<div class="text-center">
-		<h3>{{ utilUserContactInfo.user.name }}</h3>
-		<p>{{ utilUserContactInfo.user.address }}<br/>{{ utilUserContactInfo.user.city }} {{ utilUserContactInfo.user.province }} {{ utilUserContactInfo.user.postal }} </p>
+		<h3>{{ ::utilUserContactInfo.user.displayName }}</h3>
+		<p>{{ ::utilUserContactInfo.user.address1 }} {{ ::utilUserContactInfo.user.address2 }}<br/>{{ ::utilUserContactInfo.user.city }} {{ ::utilUserContactInfo.user.province }} {{ ::utilUserContactInfo.user.postalCode }} </p>
 		<hr>
-		<p><a href="mailto:{{ utilUserContactInfo.user.email }}">{{ utilUserContactInfo.user.email }}</a></p>
+		<p><a href="mailto:{{ ::utilUserContactInfo.user.email }}">{{ ::utilUserContactInfo.user.email }}</a></p>
 	</div>
-	<div ng-if="utilUserContactInfo.user.projectRole" class="text-center">
+	<div ng-if="utilUserContactInfo.user.roles" class="text-center">
 		<hr>
-		<label class="control-label">Project Role</label>
-		<p><span class="label btn-primary" ng-repeat="role in utilUserContactInfo.user.projectRole">{{ role.role }}</span></p>
-	</div>
-	<div ng-if="utilUserContactInfo.user.systemRole" class="text-center">
-		<hr>
-		<label class="control-label">System Role</label>
-		<p><span class="label btn-primary" ng-repeat="role in utilUserContactInfo.user.systemRole">{{ role.role }}</span></p>
+		<label class="control-label">Roles</label>
+		<p><span class="label label-primary" ng-repeat="role in ::utilUserContactInfo.user.roles">{{ role }}</span></p>
 	</div>
 	<hr>
 	<label class="control-label text-center">Notification Preferences</label>
@@ -32,5 +24,5 @@
 	</p>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" type="button" ng-click="utilUserContactInfo.cancel()">Close</button>
+	<button class="btn btn-default" type="button" ng-click="utilUserContactInfo.cancel()">Close</button>
 </div>
