fixed some broken routes, cleaned up some errors in the artifact load, tightened up the my projects load to be much much faster I hope and a few other things, oh yeah wired up the ce enforcement table with better data and made sure it only appears on the right phase

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -37,7 +37,7 @@
 		class="anchor-section"
 		id="anchor-enforcement"
 		x-project="project"
-		ng-if="project.status === 'Post Certification' || 1">
+		ng-if="project.currentPhase.code === 'post-certification'">
 	</tmpl-enforcement-browser>
 
 	<tmpl-project-initiated
