--- a/modules/project-comments/client/views/period-view.html
+++ b/modules/project-comments/client/views/period-view.html
@@ -12,10 +12,8 @@
 <div class="panel panel-default">
 	<div class="panel-body">
 		Phase: {{period.phaseName}} <br/>
-		Target: {{period.targetType}}  {{period.targetVersion}}<br/>
-		Roles: {{period.roles.join ('<br/>')}} <br/>
+		Artifact: {{period.artifactType}}  {{period.artifactVersion}}<br/>
 		Instructions: {{period.instructions}} <br/>
-		Resolved: {{period.resolved}} <br/>
 		Start Date : {{period.dateStarted}} <br/>
 		End Date : {{period.dateCompleted}} <br/>
 
