--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,6 +1,6 @@
 <div class="container-fluid footer" ng-cloak>
 	<div class="row">
-		<div ng-class="{'col-xs-12': !footer.side, 'col-xs-10': footer.side}">
+		<div id="main-foot-content" ng-class="{'col-sm-12': !footer.side, 'col-sm-10': footer.side}">
 			<div class="panel panel-default">
 				<div class="panel-body small">
 					<div class="pull-right">
