--- a/modules/projects/client/views/project.abstract.html
+++ b/modules/projects/client/views/project.abstract.html
@@ -1,6 +1,6 @@
 <section id="project-view" class="row">
-	<ui-view class='col-sm-10'></ui-view>
-	<div class='col-sm-2'>
+	<ui-view class='col-sm-10 tr-slide' id="main-content-section"></ui-view>
+	<div class='col-sm-2 tr-slide' id="main-menu-section">
 		<tmpl-system-menu x-menu-context="'project'" x-project="project"></tmpl-system-menu>
 	</div>
 </section>
