--- a/modules/artifacts/client/views/artifact-notify.html
+++ b/modules/artifacts/client/views/artifact-notify.html
@@ -20,17 +20,12 @@
 		<div ng-show="form.curTab === 'Content'">
 			<hr/>
 			<div class="row">
-				<div class="col-sm-8">
+				<div class="col-sm-12">
 					<div class="form-inline form-group">
 						<label class="control-label" for="template">Template</label>
-						<select type="text" id="template" class="form-control" ng-options="tmp as tmp.name for tmp in taskNotifications.templates track by tmp.code" ng-change="taskNotifications.setContent()" ng-model="taskNotifications.selectedTemplate"></select>
+						<select type="text" id="template" class="form-control" ng-options="tmp as tmp.name for tmp in templates track by tmp.code" ng-change="setContent()" ng-model="selectedTemplate"></select>
 					</div>
-					<textarea rows="10" ng-model="taskNotifications.taskData.mailContent" class="form-control"></textarea>
-				</div>
-				<div class="col-sm-4">
-					<label class="control-label">Attachments</label>
-					<div class="well well-sm">
-					</div>
+					<textarea rows="10" ng-model="mailContent" class="form-control"></textarea>
 				</div>
 			</div>
 		</div>
@@ -44,21 +39,21 @@
 					<div class="form-group">
 						<label class="control-label" for="scheduledDate">Send On</label>
 						<div class="input-group">
-							<input type="text" class="form-control text-center" ng-model="taskNotifications.taskData.dateQueued" ng-disabled="1"/>
-							<div x-modal-date-picker x-selected-date="taskNotifications.taskData.dateQueued" class="input-group-addon btn-default"><i class="glyphicon glyphicon-calendar"></i></div>
+							<input type="text" class="form-control text-center" ng-model="dateQueued" ng-disabled="1"/>
+							<div x-modal-date-picker x-selected-date="dateQueued" class="input-group-addon btn-default"><i class="glyphicon glyphicon-calendar"></i></div>
 						</div>
 					</div>
 
-					<div class="form-group text-center" ng-if="taskNotifications.taskData.status === 'pending' && taskNotifications.taskData.dateQueued" >
-						<a class="btn btn-success" href ng-click="taskNotifications.taskData.status = 'queued'">Add to Queue</a>
+					<div class="form-group text-center" ng-if="status === 'pending' && dateQueued" >
+						<a class="btn btn-success" href ng-click="status = 'queued'">Add to Queue</a>
 					</div>
 
-					<div class="form-group text-center" ng-if="taskNotifications.taskData.status === 'queued'" >
-						<a class="btn btn-warning" href ng-click="taskNotifications.taskData.status = 'pending'">Remove from Queue</a>
+					<div class="form-group text-center" ng-if="status === 'queued'" >
+						<a class="btn btn-warning" href ng-click="status = 'pending'">Remove from Queue</a>
 					</div>
 
-					<div class="form-group text-center" ng-if="taskNotifications.taskData.status === 'sent'" >
-						<p ng-if="taskNotifications.taskData.status === 'sent'">Sent on {{ taskNotifications.taskData.dateSent  | amDateFormat:'MMM Do, YYYY hh:mm a' }}</p>
+					<div class="form-group text-center" ng-if="status === 'sent'" >
+						<p ng-if="status === 'sent'">Sent on {{ dateSent  | amDateFormat:'MMM Do, YYYY hh:mm a' }}</p>
 					</div>
 
 				</div>
@@ -71,10 +66,14 @@
 			<!-- Recipients -->
 			<div class="row">
 				<div class="col-sm-12 text-right small">
-					<a href x-modal-select-users x-users="taskNotifications.customRecipients" x-project="taskNotifications.project">Add Recipients</a> | <a href x-modal-recipient-list x-users="taskNotifications.mailOut">Get Addresses</a>
+					<a href x-modal-select-users
+						x-callback="addRecipients"
+						x-unique="true"
+						x-users="customRecipients"
+						x-project="project">Add Recipients</a> | <a href x-modal-recipient-list x-users="mailOut">Get Addresses</a>
 				</div>
 			</div>
-			<div class="row" ng-repeat="(role, list) in taskNotifications.recipients">
+			<div class="row" ng-repeat="(role, list) in recipients">
 				<div class="col-sm-6">
 					<div ng-if="list.viaEmail.length > 0">
 						<label class="control-label">{{ role }} By Email</label>
@@ -100,20 +99,25 @@
 					</div>
 				</div>
 			</div>
+			<div class="row" ng-if="!recipients">
+				<div class="col-sm-12">
+					No recipients indicated.
+				</div>
+			</div>
 		</div>
 		<hr>
 		<div class="text-right">
-			<div class="pull-left form-control-static" ng-show="taskNotifications.taskData.status === 'queued' && taskNotifications.taskData.dateQueued && !taskNotifications.taskData.dateSent">
-				Date Queued: {{ taskNotifications.taskData.dateQueued  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
+			<div class="pull-left form-control-static" ng-show="status === 'queued' && dateQueued && !dateSent">
+				Date Queued: {{ dateQueued  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
 			</div>
-			<div class="pull-left form-control-static" ng-show="taskNotifications.taskData.dateSent">
-				Date Sent: {{ taskNotifications.taskData.dateSent  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
+			<div class="pull-left form-control-static" ng-show="dateSent">
+				Date Sent: {{ dateSent  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
 			</div>
 			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-default" href ng-click="taskNotifications.saveProcess()">Save</a>
+			<a class="btn btn-default" href ng-click="saveProcess()">Save</a>
 			<a class="btn btn-primary" href ng-show="form.curTab === 'Content'" ng-click="form.curTab = 'Schedule'">Next</a>
 			<a class="btn btn-primary" href ng-show="form.curTab === 'Schedule'" ng-click="form.curTab = 'Recipients'">Next</a>
-			<a class="btn btn-success" href ng=click="submit()" ng-show="form.curTab === 'Recipients' && taskNotifications.taskData.status === 'pending' && taskNotifications.taskData.dateQueued">Add to Queue</a>
+			<a class="btn btn-success" href ng=click="submit()" ng-show="form.curTab === 'Recipients' && status === 'pending' && dateQueued">Add to Queue</a>
 		</div>
 	</div>
 
