--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -3,7 +3,7 @@
 	<div class="container-fluid">
 
 		<div class="col-sm-12" ng-init="showSideMenu = true">
-			<a class="menu-toggle" ng-click="toggleSideMenu()">
+			<a class="menu-toggle" ng-click="toggleSideMenu()" ng-if="authentication.user">
 				<span class="glyphicon glyphicon-menu-hamburger"></span><span ng-show="!showSideMenu" class="glyphicon glyphicon-menu-left"></span><span ng-show="showSideMenu" class="glyphicon glyphicon-menu-right"></span>				
 			</a>
 			<div class="navbar-header">
