--- a/modules/configuration/client/views/configuration.html
+++ b/modules/configuration/client/views/configuration.html
@@ -1,6 +1,6 @@
 <section id="configuration-view" class="row">
 
-	<div class='col-sm-10'>
+	<div class='col-sm-10 tr-slide' id='main-content-section'>
 		<h1 class="page-title">
 			Project Template Provisioning
 		</h1>
@@ -40,7 +40,7 @@
 		</div> <!-- /panel -->
 
 	</div> <!-- /col12 -->
-	<div class='col-sm-2'>
+	<div class='col-sm-2 tr-slide' id='main-side-section'>
 		<tmpl-system-menu x-menu-context="'configuration'"></tmpl-system-menu>
 	</div>
 
