--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -565,6 +565,15 @@ th .progress-bar {
 	bottom: 0;
 }
 
+.document-icon-list a {
+	font-size: 10px;
+}
+.document-icon-list a .glyphicon {
+	font-size: 40px;
+}
+.document-icon-list .thumbnail {
+	margin: 3px;
+}
 // -------------------------
 // PANELS...
 // -------------------------
