--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -244,7 +244,13 @@ h3 .small {
 h3 .small .label {
 	font-weight: 500;
 }
+ 
 
+ .col-0 {
+ 	width: 0;
+ 	margin: 0;
+ 	overflow: hidden;
+ }
 // -------------------------
 // HELPER CLASSES...
 // -------------------------
